feat: update description of Education

--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
         </div>
         <div>
             <h2>Education</h2>
+            <h3>High School of Economics - Nizhny Novgorod (2017 - 2019)</h3>
+                <p>Master's degree "Enterpreunership and leadership"</p>
+
+            <h3>N. I. Lobachevsky State University of Nizhny Novgorod (2013 - 2017)</h3>
+            <p>Bachelor degree "Management"</p>
+
         </div>
         <div>
             <h2>Skills</h2>
