feat: update description of Contacts

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <main>
         <div>
             <h2>Contacts</h2>
+                <p>Phone Number: +7 961 632 36 89</p>
+                <p>E-Mail: aliya.asadova15@gmail.com</p>
         </div>
         <div>
             <h2>Education</h2>
