feat: update description of Additional info

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         </div>
         <div>
             <h2>Additional Info</h2>
+            <p>English: Upper-Intermidiate (IELTS - 6.5)</p>
         </div>
     </main>
 </div>
