refactor: improve formatting and fixing typos

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
             padding: 5px 15px;
             margin-top: 50px;
         }
+
+        .no-information {
+            color: #6b6b6b;
+        }
     </style>
 </head>
 <body>
@@ -39,21 +43,21 @@
         <div>
             <h2>Education</h2>
             <h3>High School of Economics - Nizhny Novgorod (2017 - 2019)</h3>
-                <p>Master's degree "Enterpreunership and leadership"</p>
-
+            <p>Master's degree "Entrepreneurship and leadership"</p>
             <h3>N. I. Lobachevsky State University of Nizhny Novgorod (2013 - 2017)</h3>
             <p>Bachelor degree "Management"</p>
-
         </div>
         <div>
             <h2>Skills</h2>
+            <span class="no-information">No information provided</span>
         </div>
         <div>
             <h2>Experience</h2>
+            <span class="no-information">No information provided</span>
         </div>
         <div>
             <h2>Additional Info</h2>
-            <p>English: Upper-Intermidiate (IELTS - 6.5)</p>
+            <p>English: Upper-Intermediate (IELTS - 6.5)</p>
         </div>
     </main>
 </div>
